INTERNAL-489 - Make filter drop down chevrons point down when collapsed

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/navigation/left.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/navigation/left.phtml
@@ -86,7 +86,7 @@ if (!$count) {
                                 class="button button--outline-secondary icon-button icon-button--size-xs group-hoverable"
                                 type="button" aria-label="<?= $escaper->escapeHtmlAttr(__('Category')) ?>">
                                     <span x-ref="AccordionIcon">
-                                        <?= $hyvaicons->renderHtml('chevron', '-rotate-90'); ?>
+                                        <?= $hyvaicons->renderHtml('chevron', 'rotate-90'); ?>
                                     </span>
                             </button>
                         </div>
