--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/attributes.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/attributes.phtml
@@ -41,7 +41,7 @@ $attributes = array_merge(
         </div>
         <span x-ref="AccordionIcon"
               class="button button--outline-secondary icon-button icon-button--size-xs group-hoverable">
-            <?= $hyvaicons->renderHtml('chevron', 'rotate-90', attributes: ['title' => '']); ?>
+            <?= $hyvaicons->renderHtml('chevron', 'rotate-90'); ?>
         </span>
     </button>
     <div
