--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/view.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/view.phtml
@@ -68,7 +68,7 @@ if ($sorter) {
                                 <h2 class="grow text-left text-text-500"><?= $escaper->escapeHtml(__('Sort by')) ?></h2>
                                 <button class="button button--outline-secondary icon-button icon-button--size-xs group-hoverable" type="button" aria-label="<?= $escaper->escapeHtmlAttr(__('Sort by')) ?>">
                                     <span x-ref="AccordionIcon">
-                                        <?= $hyvaicons->renderHtml('chevron', '-rotate-90'); ?>
+                                        <?= $hyvaicons->renderHtml('chevron', 'rotate-90'); ?>
                                     </span>
                                 </button>
                             </div>
@@ -119,7 +119,7 @@ if ($sorter) {
                                         <h2 class="grow text-left text-text-500"><?= $escaper->escapeHtml(__($filter->getName())) ?></h2>
                                         <button class="button button--outline-secondary icon-button icon-button--size-xs group-hoverable" type="button" aria-label="<?= $escaper->escapeHtml(__($filter->getName())) ?>">
                                             <span x-ref="AccordionIcon">
-                                                <?= $hyvaicons->renderHtml('chevron', '-rotate-90'); ?>
+                                                <?= $hyvaicons->renderHtml('chevron', 'rotate-90'); ?>
                                             </span>
                                         </button>
                                     </div>
