INTERNAL-489 - Fix chevron display

--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/menu.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/menu.phtml
@@ -40,7 +40,7 @@ $id = uniqid();
         </h2>
         <div class="button button--outline-secondary icon-button icon-button--size-xs group-hoverable md:hidden">
             <span x-ref="AccordionIcon">
-                <?= $hyvaicons->renderHtml('chevron', '-rotate-90') ?>
+                <?= $hyvaicons->renderHtml('chevron', 'rotate-90') ?>
             </span>
         </div>
     </button>
