INTERNAL-489 - Fix logo interferes with text behind it

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
@@ -129,7 +129,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
     <div id="end-of-header"></div>
 </header>
 
-<div class="pointer-events-none sticky top-[88px] z-30 h-[1px] max-md:hidden mix-blend-difference"
+<div class="pointer-events-none sticky top-[88px] z-30 h-[1px] max-md:hidden mix-blend-difference contrast-50"
      :style="`opacity: ${$store.main.opacityOnZoom}`"
 >
     <div
