INTERNAL-499 - Remove trash icon if variant was not in cart or its quantity is equal to 1

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
@@ -106,6 +106,8 @@ if (!$inStock) {
                     disabled="<?= (int)(!$isProductInCart || !$inStock) ?>"
                     :disabled="(!isVariantInCart && variantQty === 1) || !<?= (int)$inStock ?>"
                     @click.prevent.stop="decreaseQty()"
+                    x-show="isVariantInCart || variantQty > 1"
+                    x-cloak
                 >
                     <span class="sr-only">
                         <?= __('Decrease quantity for %1', $product->getName()) ?>
