Show highlighted categories slider button

--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/widgets/categories.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/widgets/categories.phtml
@@ -137,7 +137,7 @@ $template
         'id' => 'collections-list-' . uniqid(),
         'is_full_page' => false,
         'class' => 'slider--pagebuilder ' . ($displayAsButtons ? 'slider--buttons' : ''),
-        'is_actions_disabled' => $displayAsButtons
+        'is_actions_disabled' => false
     ])
     ->render('Magento_Catalog::html/slider.phtml')
 ?>
