--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/clp_fallback.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/clp_fallback.phtml
@@ -33,7 +33,7 @@ use Magento\Framework\View\Element\Template;
       </div>
     </template>
     <div class="flex flex-col gap-3">
-      <h1 class="text-lg text-text-500" x-text="$store['transition'].pageData?.title"></h1>
+        <h1 class="text-xl md:text-[32px] text-text-500" x-text="$store['transition'].pageData?.title"></h1>
       <div
         class="rte"
         x-html="$store['transition'].pageData?.description"
