--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_header.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_header.scss
@@ -3,9 +3,15 @@
 
   --wishlist-width: 400px;
 
+  --account-width: 300px;
+
   --search-width: 500px;
 
   @screen lg {
+    --search-width: 700px;
+  }
+
+  @screen xl {
     --search-width: 800px;
   }
 }
@@ -84,7 +90,19 @@
       //  );
       //}
 
-      &:has(+ .resizable--cart.resizable--visible) {
+      &:has(~ .resizable--account.resizable--visible) {
+        transition-delay: 100ms;
+
+        /* has account active */
+        transform: translateX(
+                        calc(
+                                (var(--account-width) - var(--button-width) + var(--button-gap) * 2) *
+                                -1
+                        )
+        );
+      }
+
+      &:has(~ .resizable--cart.resizable--visible) {
         transition-delay: 100ms;
 
         /* has cart active */
@@ -97,30 +115,58 @@
       }
     }
 
-    //&--wishlist {
-    //  &.resizable--visible {
-    //    @screen md {
-    //      transform: translateX(
-    //        calc(
-    //          var(--button-gap) * -1
-    //        )
-    //      );
-    //    }
-    //  }
-    //
-    //  &:has(~ .resizable--cart.resizable--visible) {
-    //    @screen md {
-    //      transition-delay: 100ms;
-    //
-    //      /* has cart active */
-    //      transform: translateX(
-    //        calc(
-    //          (var(--minicart-width) - var(--button-width) + var(--button-gap)) *
-    //            -1
-    //        )
-    //      );
-    //    }
-    //  }
-    //}
+    //&--wishlist,
+    &--account {
+      &.resizable--visible {
+        @screen md {
+          transform: translateX(
+                          calc(
+                                  var(--button-gap) * -1
+                          )
+          );
+        }
+      }
+
+      &:has(~ .resizable--cart.resizable--visible) {
+        @screen md {
+          transition-delay: 100ms;
+
+          /* has cart active */
+          transform: translateX(
+                          calc(
+                                  (var(--minicart-width) - var(--button-width) + var(--button-gap)) *
+                                  -1
+                          )
+          );
+        }
+      }
+    }
+
+    //&--wishlist,
+    &--account {
+      &.resizable--visible {
+        @screen md {
+          transform: translateX(
+                          calc(
+                                  var(--button-gap) * -1
+                          )
+          );
+        }
+      }
+
+      &:has(~ .resizable--cart.resizable--visible) {
+        @screen md {
+          transition-delay: 100ms;
+
+          /* has cart active */
+          transform: translateX(
+                          calc(
+                                  (var(--minicart-width) - var(--button-width) + var(--button-gap)) *
+                                  -1
+                          )
+          );
+        }
+      }
+    }
   }
 }
