--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/header/link/register.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/header/link/register.phtml
@@ -20,9 +20,14 @@ $label = $block->getLabel() ? $block->getLabel() : __('Create an Account');
 <?php if ($customerRegistration->isAllowed()): ?>
     <a
         x-element-transition-trigger
-        class="block py-2 hover:bg-gray-100"
+        class="focus-visible:focus-ring group flex min-h-11 items-center justify-between py-1"
         href="<?= $escaper->escapeUrl($customerRegistration->getRegisterUrl()) ?>"
+        role="link"
     >
-        <?= $escaper->escapeHtml($label) ?>
+        <span
+            class="link max-w-full truncate border-transparent transition-colors md:group-hover:border-b-1 md:group-hover:border-current md:group-hover:text-primary-600"
+        >
+            <?= $escaper->escapeHtml($label) ?>
+        </span>
     </a>
 <?php endif; ?>
