--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/header/link/sign-in.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/header/link/sign-in.phtml
@@ -14,13 +14,18 @@ $label = $block->getLabel() ? $block->getLabel() : __('Sign In');
 
 <a
     x-element-transition-trigger
-    class="block py-2 hover:bg-gray-100"
+    class="focus-visible:focus-ring group flex min-h-11 items-center justify-between py-1"
     onclick="hyva.setCookie && hyva.setCookie(
         '<?= $escaper->escapeJs(Redirect::LOGIN_REDIRECT_URL) ?>',
         window.location.href,
         1
         )"
     href="<?= $escaper->escapeUrl($block->getUrl('customer/account/index')) ?>"
+    role="link"
 >
-    <?= $escaper->escapeHtml($label) ?>
+    <span
+        class="link max-w-full truncate border-transparent transition-colors md:group-hover:border-b-1 md:group-hover:border-current md:group-hover:text-primary-600"
+    >
+        <?= $escaper->escapeHtml($label) ?>
+    </span>
 </a>
