--- a/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/link.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/link.phtml
@@ -14,13 +14,18 @@ $urlPath = $block->getData('path') ?? 'wishlist';
 
 <a
     x-element-transition-trigger
-    class="block py-2 hover:bg-gray-100 relative"
+    class="focus-visible:focus-ring group flex min-h-11 items-center justify-between py-1 relative"
     href="<?= $escaper->escapeUrl($block->getUrl($urlPath)) ?>"
+    role="link"
     x-data="{ itemCount: 0 }"
     @private-content-loaded.window="itemCount = parseInt($event.detail.data.wishlist.counter)"
 >
-    <?= $escaper->escapeHtml($label) ?>
-    <template x-if="itemCount">
-        <span class="tabular-nums" x-text="`(${itemCount})`"></span>
-    </template>
+    <span
+        class="link max-w-full truncate border-transparent transition-colors md:group-hover:border-b-1 md:group-hover:border-current md:group-hover:text-primary-600"
+    >
+        <?= $escaper->escapeHtml($label) ?>
+        <template x-if="itemCount">
+            <span class="tabular-nums" x-text="`(${itemCount})`"></span>
+        </template>
+    </span>
 </a>
