--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/account/account-button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/account/account-button.phtml
@@ -14,11 +14,12 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 
 <button
     class="contrast-border md:button--filled-secondary button ghost-primary icon-button icon-button--size-lg col-start-5"
+    :class="{'hidden': !$store.main.isMobile && $store.resizable.isVisible('account-desktop')}"
     x-a11y-trap-element="$store.transition.isPreviewActive && !$store.resizable.isVisible()"
     @click="!isAccountVisible ? $store.account.showAccount() : $store.account.hideAccount()"
+    :tabindex="$store.resizable.isVisible('account-desktop') ? -1 : 0"
     type="button"
     aria-label="<?= __('View account') ?>"
-    :class="{'hidden': !$store.main.isMobile && $store.resizable.isVisible('account-desktop')}"
 >
     <div
         class="contents"
