--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/account/account-overlay.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/account/account-overlay.phtml
@@ -37,25 +37,16 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         </div>
 
         <div class="max-h-80 pb-4 md:px-6">
-            <div
-                class="flex flex-col gap-3"
-                x-show="$store.main.isUserLoggedIn"
-                <?php if ($block->customerLoggedIn()): ?>
-                    style="display: none"
-                <?php endif; ?>
-            >
-                <?= $block->getData('header.customer.logged.in.links') ?>
-            </div>
+            <template x-if="$store.main.isUserLoggedIn">
+                <div class="flex flex-col gap-3">
+                    <?= $block->getData('header.customer.logged.in.links') ?>
+                </div>
+            </template>
 
-            <div
-                class="flex flex-col gap-3"
-                x-show="!$store.main.isUserLoggedIn"
-                <?php if (!$block->customerLoggedIn()): ?>
-                    style="display: none"
-                <?php endif; ?>
-            >
-                <?= $block->getData('header.customer.logged.out.links') ?>
-            </div>
+            <template x-if="!$store.main.isUserLoggedIn">
+                <div class="flex flex-col gap-3">
+                    <?= $block->getData('header.customer.logged.out.links') ?>
+                </div>
+            </template>
         </div>
-    </div>
 </div>
