--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/account/account-overlay.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/account/account-overlay.phtml
@@ -36,7 +36,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
             </h1>
         </div>
 
-        <div class="max-h-80 pb-4 md:px-6">
+        <div class="max-h-80 pb-4 md:pt-2 md:px-6">
             <template x-if="$store.main.isUserLoggedIn">
                 <div class="flex flex-col gap-3">
                     <?= $block->getData('header.customer.logged.in.links') ?>
