INTERNAL-490 - Add a missing </div>

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/account/account-overlay.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/account/account-overlay.phtml
@@ -49,4 +49,5 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                 </div>
             </template>
         </div>
+    </div>
 </div>
