INTERNAL-490 - Fix icon color on mobile

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/account/account-button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/account/account-button.phtml
@@ -22,7 +22,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
     aria-label="<?= __('View account') ?>"
 >
     <div
-        class="contents"
+        class="contents text-text-50"
         x-show="!isAccountVisible"
     >
         <span>
