--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-items.phtml
@@ -149,7 +149,7 @@ if (!$menuItems) {
                         <?php endif; ?>
                         href="<?= $menuItem['url'] ?>"
                         role="link"
-                        x-element-transition-trigger:category="{
+                        x-element-transition-trigger:category.animate="{
                             'title': `<?= $menuItem['name'] ?>`,
                             'url': '<?= $menuItem['url'] ?>',
                             'breadcrumbs': <?= $escaper->escapeHtmlAttr(json_encode($breadcrumbs)) ?>,
