--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filter.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filter.phtml
@@ -7,6 +7,7 @@ use Magento\Catalog\Helper\Data;
 use Magento\Catalog\Model\Layer\Filter\FilterInterface;
 use Magento\Framework\Escaper;
 use Magento\LayeredNavigation\Block\Navigation\FilterRenderer;
+use Satoshi\Theme\Block\Template;
 
 /** @var FilterRenderer $block */
 /** @var Escaper $escaper */
@@ -16,7 +17,19 @@ $catalogHelper = $this->helper(Data::class);
 
 /** @var array $filterItems */
 /** @var FilterInterface $filter */
+/** @var Template $template */
 ?>
+
+<?php if ($escaper->escapeHtml($filter->getName()) === 'Price'): ?>
+    <?=
+    $template
+        ->setData([
+            'min_price_range' => $escaper->escapeHtml($filter->getMinRange()),
+            'max_price_range' => $escaper->escapeHtml($filter->getMaxRange()),
+        ])
+        ->render('Magento_LayeredNavigation::html/filter-price-range-slider.phtml')
+    ?>
+<?php endif; ?>
 
 <div aria-label="<?= $escaper->escapeHtml(__($filter->getName())) ?>" role="radiogroup">
     <?php foreach ($filterItems as $filterItem): ?>
