--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filter.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filter.phtml
@@ -16,21 +16,29 @@ $catalogHelper = $this->helper(Data::class);
 
 /** @var array $filterItems */
 /** @var FilterInterface $filter */
+
+$isRadioType = $filter->getName() === 'Price';
 ?>
 
-<div aria-label="<?= $escaper->escapeHtml(__($filter->getName())) ?>" role="radiogroup">
+<div aria-label="<?= $escaper->escapeHtml(__($filter->getName())) ?>" role="group">
     <?php foreach ($filterItems as $filterItem): ?>
         <div class="relative h-11 w-full">
-            <label for="filter-item-<?= $filterItem->getName() ?>-<?= $filterItem->getValueString() ?>" class="radio mb-0 h-full w-full py-1 flex justify-between items-center">
+            <label for="filter-item-<?= $filterItem->getName() ?>-<?= $filterItem->getValueString() ?>"
+                   class="<?= $isRadioType ? 'radio' : 'checkbox' ?> mb-0 h-full w-full py-1 flex justify-between items-center">
                 <div class="flex items-center">
                     <?php if ($filterItem->getCount() > 0): ?>
                         <input
-                            type="radio"
+                            type="<?= $isRadioType ? 'radio' : 'checkbox' ?>"
                             name="filter-item-<?= $filter->getName() ?>"
                             id="filter-item-<?= $filterItem->getName() ?>-<?= $filterItem->getValueString() ?>"
-                            class="radio__input"
-                            @change="selectFilter('<?= $escaper->escapeJs($filter->getName()) ?>', '<?= $escaper->escapeUrl($filterItem->getUrl()) ?>')"
-                            :checked="selectedFilters['<?= $escaper->escapeJs($filter->getName()) ?>'] === '<?= $escaper->escapeUrl($filterItem->getUrl()) ?>'"
+                            class="<?= $isRadioType ? 'radio__input' : 'checkbox__input' ?>"
+                            @change="selectFilter(
+                                '<?= $escaper->escapeJs($filter->getAttributeModel()->getAttributeCode()) ?>',
+                                '<?= $escaper->escapeJs($filterItem->getValueString()) ?>',
+                                '<?= $escaper->escapeUrl($filterItem->getUrl()) ?>',
+                                '<?= $isRadioType ?>'
+                            )"
+                            :checked="isFilterSelected('<?= $escaper->escapeJs($filter->getAttributeModel()->getAttributeCode()) ?>', '<?= $escaper->escapeUrl($filterItem->getValueString()) ?>')"
                             <?php if ((int) $filterItem->getCount() === 1): ?>
                                 aria-label="<?= $escaper->escapeHtmlAttr(__('%1 filter, 1 available product', strip_tags((string)$filterItem->getLabel()))) ?>"
                             <?php else: ?>
@@ -39,14 +47,17 @@ $catalogHelper = $this->helper(Data::class);
                         />
                         <?php if ($filterItem->getSwatchValue()): ?>
                             <span
-                                class="w-6 h-6 mr-5 p-1 rounded border border-gray-300"
+                                class="checkbox__swatch"
                                 style="background-color: <?= $escaper->escapeHtml($filterItem->getSwatchValue()) ?>;"
                             ></span>
                         <?php else: ?>
-                            <span class="radio__control mr-5" aria-hidden="true"></span>
+                            <span class="<?= $isRadioType ? 'radio__control' : 'checkbox__control' ?>"
+                                  aria-hidden="true"></span>
                         <?php endif; ?>
                     <?php endif; ?>
-                    <span class="radio__label ml-0"><?= /* @noEscape */ $filterItem->getLabel() ?></span>
+                    <span
+                        class="<?= $isRadioType ? 'radio__label' : 'checkbox__label' ?>"><?= /* @noEscape */
+                        $filterItem->getLabel() ?></span>
                 </div>
                 <?php if ($catalogHelper->shouldDisplayProductCountOnLayer()): ?>
                     <span>(<?= /* @noEscape */ $localeFormatter->formatNumber((int)$filterItem->getCount()) ?>)</span>
