INTERNAL-498 - Fix filter checkboxes issues on desktop screens

--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filter.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filter.phtml
@@ -32,13 +32,8 @@ $isRadioType = $filter->getName() === 'Price';
                             name="filter-item-<?= $filter->getName() ?>"
                             id="filter-item-<?= $filterItem->getName() ?>-<?= $filterItem->getValueString() ?>"
                             class="<?= $isRadioType ? 'radio__input' : 'checkbox__input' ?>"
-                            @change="selectFilter(
-                                '<?= $escaper->escapeJs($filter->getAttributeModel()->getAttributeCode()) ?>',
-                                '<?= $escaper->escapeJs($filterItem->getValueString()) ?>',
-                                '<?= $escaper->escapeUrl($filterItem->getUrl()) ?>',
-                                '<?= $isRadioType ?>'
-                            )"
-                            :checked="isFilterSelected('<?= $escaper->escapeJs($filter->getAttributeModel()->getAttributeCode()) ?>', '<?= $escaper->escapeUrl($filterItem->getValueString()) ?>')"
+                            @change="selectFilter('<?= $escaper->escapeJs($filterItem->getParamKey()) ?>', '<?= $escaper->escapeJs($filterItem->getValueString()) ?>','<?= $escaper->escapeUrl($filterItem->getUrl()) ?>', <?= $isRadioType ?>)"
+                            :checked="isFilterSelected('<?= $escaper->escapeJs($filterItem->getParamKey() . $filterItem->getValueString()) ?>')"
                             <?php if ((int) $filterItem->getCount() === 1): ?>
                                 aria-label="<?= $escaper->escapeHtmlAttr(__('%1 filter, 1 available product', strip_tags((string)$filterItem->getLabel()))) ?>"
                             <?php else: ?>
